3.5 Metal Backend Selected- Object selected Outline Missing #103412

Closed
opened 2022-12-22 17:23:39 +01:00 by Hector DeAnda · 17 comments

System Information
Operating system: macOS-12.6.2-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon HD - FirePro D500 1.2

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-21 20:25, hash: cef5841e12
Worked: 3.5 with Metal backend not selected.

Short description of error
When Metal backend is selected in 3.5, the object outline is missing when selected.

Exact steps for others to reproduce the error
In Blender 3.5, select Metal backend, restart, objects that are selected are missing yellow outline.

**System Information** Operating system: macOS-12.6.2-x86_64-i386-64bit 64 Bits Graphics card: Metal API AMD Radeon HD - FirePro [D500](https://archive.blender.org/developer/D500) 1.2 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-21 20:25, hash: `cef5841e12` Worked: 3.5 with Metal backend not selected. **Short description of error** When Metal backend is selected in 3.5, the object outline is missing when selected. **Exact steps for others to reproduce the error** In Blender 3.5, select Metal backend, restart, objects that are selected are missing yellow outline.
Author

Added subscriber: @HectorDeAnda

Added subscriber: @HectorDeAnda

#103932 was marked as duplicate of this issue

#103932 was marked as duplicate of this issue

#103821 was marked as duplicate of this issue

#103821 was marked as duplicate of this issue

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

That's strange. Here it works correctly.

Screenshot 2022-12-22 at 17.39.55.png

I am on macOS Ventura, 13.1, on an Apple Silicon MacBook Pro 16 with M1 Max.

I see you are still on Monterey - it could be a driver bug in macOS 12.x that was fixed in Ventura.
You are also on Intel, so you are using a very different GPU.

That's strange. Here it works correctly. ![Screenshot 2022-12-22 at 17.39.55.png](https://archive.blender.org/developer/F14083846/Screenshot_2022-12-22_at_17.39.55.png) I am on macOS Ventura, 13.1, on an Apple Silicon MacBook Pro 16 with M1 Max. I see you are still on Monterey - it could be a driver bug in macOS 12.x that was fixed in Ventura. You are also on Intel, so you are using a very different GPU.
Author

This comment was removed by @HectorDeAnda

*This comment was removed by @HectorDeAnda*
Author

I should add that the performance boost from using the Metal viewport option on my Mac Pro is negligible, so it could be my older Mac and OS being the issue.

I should add that the performance boost from using the Metal viewport option on my Mac Pro is negligible, so it could be my older Mac and OS being the issue.
Author

This comment was removed by @HectorDeAnda

*This comment was removed by @HectorDeAnda*

Added subscriber: @pixeltrain3d

Added subscriber: @pixeltrain3d

Same here. Outline doesn't work.

System Information
Operating system: macOS-13.1-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon Pro 580 1.2

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-29 07:49, hash: 8c194e1ba6

The outline works for Light sources and cameras, but not for meshes like the default cube

Bildschirm­foto 2022-12-29 um 12.44.54.png

Same here. Outline doesn't work. **System Information** Operating system: macOS-13.1-x86_64-i386-64bit 64 Bits Graphics card: Metal API AMD Radeon Pro 580 1.2 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-29 07:49, hash: `8c194e1ba6` The outline works for Light sources and cameras, but not for meshes like the default cube ![Bildschirm­foto 2022-12-29 um 12.44.54.png](https://archive.blender.org/developer/F14098751/Bildschirm_foto_2022-12-29_um_12.44.54.png)
Author

I tried this on my late 2013 MacBook Pro running OS Big Sure 11.7.2 with Metal turned-on in Blender 3.5 and it seems to work fine, the outline on selected meshes is there. For some reason the outline for selected meshes just doesn't work for my Late 2013 Mac Pro running OS Monterey 12.6.2

I tried this on my late 2013 MacBook Pro running OS Big Sure 11.7.2 with Metal turned-on in Blender 3.5 and it seems to work fine, the outline on selected meshes is there. For some reason the outline for selected meshes just doesn't work for my Late 2013 Mac Pro running OS Monterey 12.6.2
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Michael Parkin-White self-assigned this 2023-01-09 16:24:26 +01:00
Member

Added subscriber: @blendest

Added subscriber: @blendest
Member

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis

This issue was referenced by cd2926fb05

This issue was referenced by cd2926fb05b0179a405a5406d6b87f5bff36d15a
Philipp Oeser removed the
Interest
EEVEE & Viewport
label 2023-02-09 15:11:58 +01:00
Member

Seems this is fixed already: cd2926fb05
I'll close the report. Feel free to reopen if problem persists :)

Seems this is fixed already: cd2926fb05b0179a405a5406d6b87f5bff36d15a I'll close the report. Feel free to reopen if problem persists :)
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-02-22 05:46:26 +01:00
Pratik Borhade added
Status
Resolved
and removed
Status
Archived
labels 2023-02-22 05:46:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103412
No description provided.